--- a/.gitignore
+++ b/.gitignore
@@ -8,21 +8,17 @@ _privateFolder*
 _Privatefolder*
 _privatefolder*
 *projet-korum
-
 # Pour Banville
 table.csv
-
 # Autre
 .DS_Store
 .Rhistory
 .RData
-
 ##Excel
 *.xlsx
 ###########################################
 ##### LaTeX auxiliary files to ignore #####
 ###########################################
-
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -36,7 +32,6 @@ table.csv
 *.cb
 *.cb2
 .*.lb
-
 ## Intermediate documents:
 *.dvi
 *.xdv
@@ -47,11 +42,8 @@ table.csv
 *.pdf
 *.png
 *.jpg
-
-
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
-
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
@@ -59,7 +51,6 @@ table.csv
 *-blx.aux
 *-blx.bib
 *.run.xml
-
 ## Build tool auxiliary files:
 *.fdb_latexmk
 *.synctex
@@ -67,46 +58,35 @@ table.csv
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
-
 ## Auxiliary and intermediate files from other packages:
 # algorithms
 *.alg
 *.loa
-
 # achemso
 acs-*.bib
-
 # amsthm
 *.thm
-
 # beamer
 *.nav
 *.pre
 *.snm
 *.vrb
-
 # changes
 *.soc
-
 # cprotect
 *.cpt
-
 # elsarticle (documentclass of Elsevier journals)
 *.spl
-
 # endnotes
 *.ent
-
 # fixme
 *.lox
-
 # feynmf/feynmp
 *.mf
 *.mp
 *.t[1-9]
 *.t[1-9][0-9]
 *.tfm
-
 #(r)(e)ledmac/(r)(e)ledpar
 *.end
 *.?end
@@ -122,7 +102,6 @@ acs-*.bib
 *.eledsec[1-9][0-9]R
 *.eledsec[1-9][0-9][0-9]
 *.eledsec[1-9][0-9][0-9]R
-
 # glossaries
 *.acn
 *.acr
@@ -130,14 +109,11 @@ acs-*.bib
 *.glo
 *.gls
 *.glsdefs
-
 # gnuplottex
 *-gnuplottex-*
-
 # gregoriotex
 *.gaux
 *.gtex
-
 # htlatex
 *.4ct
 *.4tc
@@ -145,25 +121,20 @@ acs-*.bib
 *.lg
 *.trc
 *.xref
-
 # hyperref
 *.brf
-
 # knitr
 *-concordance.tex
 # TODO Comment the next line if you want to keep your tikz graphics files
 *.tikz
 *-tikzDictionary
-
 # listings
 *.lol
-
 # makeidx
 *.idx
 *.ilg
 *.ind
 *.ist
-
 # minitoc
 *.maf
 *.mlf
@@ -172,15 +143,14 @@ acs-*.bib
 *.slf[0-9]*
 *.slt[0-9]*
 *.stc[0-9]*
-
 # minted
 _minted*
 *.pyg
-
 # morewrites
 *.mw
-
 # nomencl
 *.nlg
 *.nlo
 .Rproj.user
+.httr-oauth
+token.rds
