exclude data input files

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ _PrivateFolder*
 _privateFolder*
 _Privatefolder*
 _privatefolder*
-journaux*html
+journaux*.html
 *rds
 *projet-korum
 # Pour Banville
