--- a/automation/macos_plist/native/clessn.l_pressrelease_qc.plist
+++ b/automation/macos_plist/native/clessn.l_pressrelease_qc.plist
@@ -3,31 +3,31 @@
 <plist version="1.0">
 <dict>
   <key>Label</key>
-  <string>clessn.e_pressreleases_qc</string>
-  <key>UserName</key>
+  <string>clessn.l_pressreleases_qc</string>
+  <key>UserName</key> 
   <string>patrick</string>
-  <key>EnableGlobbing</key>
-  <true/>
   <key>EnvironmentVariables</key>
-    <dict>
+    <dict> 
       <key>PATH</key>
-      <string>/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/sbin</string>
+      <string>/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/sbin</string> 
       <key>LANG</key>
       <string>fr_CA.UTF-8</string>
       <key>LC_ALL</key>
       <string>fr_CA.UTF-8</string>
     </dict>
   <key>StandardOutPath</key>
-  <string>/Users/patrick/Logs/e_pressreleases_qc.log</string>
+  <string>/Users/patrick/Logs/l_pressreleases_qc.log</string>
   <key>StandardErrorPath</key>
-  <string>/Users/patrick/Logs/e_pressreleases_qc.log</string>
+  <string>/Users/patrick/Logs/l_pressreleases_qc.log</string>
   <key>Debug</key>
+  <true/>
+  <key>EnableGlobbing</key>
   <true/>
   <key>ProgramArguments</key>
   <array>
     <string>/bin/sh</string>
     <string>-c</string>
-    <string>$CLESSN_ROOT_DIR/clessn-blend/automation/e_pressreleases_qc.sh</string>
+    <string>$CLESSN_ROOT_DIR/clessn-blend/automation/l_pressreleases_qc.sh</string>
   </array>
   <key>StartInterval</key> 
   <integer>7200</integer>
