--- a/automation/macos_plist/native/clessn.pressconferences_crush_quebecnationalassembly.plist
+++ b/automation/macos_plist/native/clessn.pressconferences_crush_quebecnationalassembly.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
   <key>Label</key>
-  <string>clessn.e_pressreleases_qc</string>
+  <string>clessn.pressconference_crush_quebecnationalassembly</string>
   <key>UserName</key>
   <string>patrick</string>
   <key>EnableGlobbing</key>
@@ -18,19 +18,19 @@
       <string>fr_CA.UTF-8</string>
     </dict>
   <key>StandardOutPath</key>
-  <string>/Users/patrick/Logs/e_pressreleases_qc.log</string>
+  <string>/Users/patrick/Logs/pressconference_crush_quebecnationalassembly.log</string>
   <key>StandardErrorPath</key>
-  <string>/Users/patrick/Logs/e_pressreleases_qc.log</string>
+  <string>/Users/patrick/Logs/pressconference_crush_quebecnationalassembly.log</string>
   <key>Debug</key>
   <true/>
   <key>ProgramArguments</key>
   <array>
     <string>/bin/sh</string>
     <string>-c</string>
-    <string>$CLESSN_ROOT_DIR/clessn-blend/automation/e_pressreleases_qc.sh</string>
+    <string>$CLESSN_ROOT_DIR/clessn-blend/automation/pressconference_crush.sh "quebecnationalassembly" "file" "update" "update" FALSE FALSE</string>
   </array>
   <key>StartInterval</key> 
-  <integer>7200</integer>
+  <integer>43200</integer>
   <key>KeepAlive</key>
   <false/>
   <key>RunAtLoad</key>
