--- a/automation/docker/Dockerfile
+++ b/automation/docker/Dockerfile
@@ -57,6 +57,9 @@ RUN Rscript /home/clessn/dev/more_packages.R
 COPY automation/docker/qc125_packages.R /home/clessn/dev
 RUN Rscript /home/clessn/dev/qc125_packages.R
 
+COPY automation/docker/clessnverse_packages.R /home/clessn/dev
+RUN Rscript /home/clessn/dev/clessnverse_packages.R
+
 ADD pipelines/   /home/clessn/dev/clessn/clessn-blend/pipelines
 ADD scrapers/    /home/clessn/dev/clessn/clessn-blend/scrapers
 ADD automation/  /home/clessn/dev/clessn/clessn-blend/automation
