improved error messages and fix file permissions

--- a/automation/docker/docker-compose.yml
+++ b/automation/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   clessn-blend:
     build:
-      context: ../../
+      context: ~/dev/clessn/clessn-blend
       dockerfile: automation/docker/Dockerfile
     image: clessnblend
     container_name: clessnblend
